welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: not found: value &&
  if ( (hour <7 || hour >20)) && talking {
                              ^